feat: update role endpoint
